--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Clarence Taylor</span>
+        <span class="d-block d-lg-none">Park GyeongCheol</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -63,24 +63,26 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">GyeongCheol
+            <span class="text-primary">Park</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">University Street 99 · Yuseonggu, Deajeon ·
+            <a href="mailto:star_final@naver.com">star_final@naver.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">
+            주로 Java / Spring 백앤드 개발자를 꿈꾸는 박경철입니다!<br/>
+            최근에는 Restful API 서버 개발 & OAuth2.0 / JWT 토큰과 Cloud와 Docker를 활용한 Dev-ops 개발에 큰 관심이 있습니다.<br>
+            또한 front-end에도 관심이 있어 BEM 방법론 / sass & scss / javascript & jQuery & ES6+ & React.js 를 경험하고 토이 프로젝트를 만들어보고 있습니다.<br>
+            많은 관심 부탁드립니다 ^_^
+          </p>
           <div class="social-icons">
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
+            <a href="mailto:pkch9377@gmail.com">
+              <i class="fab fa-google-plus-g"></i>
             </a>
-            <a href="#">
+            <a href="https://github.com/pkch93">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
+            <a href="https://www.facebook.com/star.final">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
@@ -95,48 +97,16 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
+              <h3 class="mb-0">취업 준비생!</h3>
               <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <p>
+                열심히 공부하고 가진 기술을 정제하고 있습니다 ㅎㅅㅎ
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">January 2018 - Present</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
-
         </div>
 
       </section>
@@ -149,10 +119,10 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">ChungNam National University</h3>
+              <div class="subheading mb-3">major : Agriculture Economy</div>
+              <div class="subheading mb-3">submajor : Computer Engeeniering</div>
+              <p>GPA: 4.05</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2006 - May 2010</span>
@@ -161,12 +131,11 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Pohang High School</h3>
+              <div class="subheading mb-3">인문계 고등학교</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">March 2009 - February 2012</span>
             </div>
           </div>
 
@@ -191,9 +160,6 @@
               <i class="fab fa-js-square"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="fab fa-react"></i>
             </li>
             <li class="list-inline-item">
@@ -203,16 +169,10 @@
               <i class="fab fa-sass"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-less"></i>
+              <i class="fab fa-java"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
+              <i class="fab fa-python"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
@@ -223,16 +183,16 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              git &amp; github과 git-flow를 활용한 협업</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Unit-test &amp; Test Driven Development / 단위 테스트 및 테스트 주도 개발</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              AWS S3 Bucket 사용 경험 / Heroku App Deploy 경험</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              다양한 언어 사용 가능 및 습득 가능 ( java / javascript &amp; node.js / python 사용가능 )</li>
           </ul>
         </div>
       </section>
@@ -242,8 +202,14 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>
+            현재 구직중입니다! Java / Spring을 사용하는 기업을 선호하며 Node.js &amp; Express.js나 python &amp; django도 상관없습니다.
+            제 기술적 능력을 기를 수 있으면서 제가 헌신할 수 있는 기업을 찾고있습니다!
+          </p>
+          <p class="mb-0">
+            취미로 축구를 좋아하며 국내축구 / 해외축구 모두 즐기고 있습니다. (가끔 풋살이나 축구도 해요!! <del>의족인건 안자랑</del>)
+            또한 사교활동을 즐기며 사람 만나는 것을 좋아합니다 ㅎㅅㅎ
+          </p>
         </div>
       </section>
 
@@ -255,32 +221,32 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              다빈치 메이커 페스티벌 우수상</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              소셜임팩트해커톤 인기상</li>
           </ul>
         </div>
+        <div class="my-auto">
+            <h2 class="mb-5">Projects</h2>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fas fa-desktop text-warning"></i>
+                Unist 멋쟁이사자처럼 해커톤 - KoreanTime</li>
+              <li>
+                <i class="fa-li fas fa-desktop text-warning"></i>
+                다빈치 메이커 페스티벌 - 청춘어람 Project</li>
+              <li>
+                <i class="fa-li fas fa-desktop text-warning"></i>
+                충남대학교 Collathon - 애완동물 이력 및 족보 플랫폼</li>
+              <li>
+                <i class="fa-li fas fa-desktop text-warning"></i>
+                멋쟁이사자처럼 해커톤 - 궁금한강사</li>
+              <li>
+                <i class="fa-li fas fa-desktop text-warning"></i>
+                소셜임팩트해커톤</li>
+            </ul>
+          </div>
       </section>
 
     </div>
